# mcp_obsidian

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README_VN.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
scripts/: sync_hermes_skills.py
src/ai_brain/: __init__.py  api.py  brief.py  cli.py  core.py  hermes_sync.py  ingest.py  mcp_server.py  skills.py  store.py
tests/: test_api.py  test_cli.py  test_core.py  test_hermes_sync.py  test_ingest.py  test_mcp_server.py  test_store.py
